--- a/CMSProject/Views/MVCWCFClient/Register.cshtml
+++ b/CMSProject/Views/MVCWCFClient/Register.cshtml
@@ -1,16 +1,11 @@
 ﻿@{
     ViewBag.Title = "Register";
 }
-<script src="~/Scripts/jquery-1.8.2.min.js"></script>
-<script type="text/javascript">
-    $.ajax({
-        url: "http://localhost:50678/Service1.svc/InsertUser1/username=dkjd",
-        type: "POST",
-        data: JSON.stringify([{ "Key": "username", "Value": "Robert" }]),
-       
-        contentType: "application/json; charset=utf-8",
-        
-        dataType: "json"
-    });
-</script>
+
 <h2>Register</h2>
+@using (Html.BeginForm("Register", "MVCWCFClient", FormMethod.Post))
+{
+    <!-- form goes here -->
+
+    <input type="submit" value="Sign Up" />
+}
