--- a/CMSProject/Views/Shared/_Layout.cshtml
+++ b/CMSProject/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
         @Html.ActionLink("Sign Out", "Logout", "User")
     }
     else {
-        @Html.ActionLink("Register", "Register", "User")
+        @Html.ActionLink("Register", "Register", " MVCWCFClient")
         <span> | </span>
-        @Html.ActionLink("Sign In", "Login", "User")
+        @Html.ActionLink("Sign In", "Index", " MVCWCFClient")
     }
 </div> 
         @RenderBody()
