--- a/CMSProject/Views/MVCWCFClient/Index.cshtml
+++ b/CMSProject/Views/MVCWCFClient/Index.cshtml
@@ -15,7 +15,7 @@
     }
 </style>
  
-<h2>Consuming WCF REST Service in Angular JS</h2>
+@*<h2>Consuming WCF REST Service in Angular JS</h2>
 <body>
     <table ng-controller="RESTClientController">
         <tr>
@@ -47,7 +47,32 @@
         </tr>
     </table>
 </body>
-</html>
+</html>*@
+@*    Login form*@
+    @using (Html.BeginForm()) {
+    <div>
+        <fieldset>
+            <legend>Account Information</legend>
+       <div class="editor-label">
+            @Html.LabelFor(model => model.username)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.username)
+            @Html.ValidationMessageFor(model => model.username)
+        </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.password)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.password)
+            @Html.ValidationMessageFor(model => model.password)
+        </div>
+            <p>
+                <input type="submit" value="Log On" />..@Html.ActionLink("Register", "Register") if you don't have an account.
+            </p>
+        </fieldset>
+    </div>
+}
 <script src="~/Scripts/angular.js"></script>
 <script src="~/Scripts/MyScripts/Modules.js"></script>
 <script src="~/Scripts/MyScripts/Services.js"></script>
